--- a/MensMorris/View/MatchView.xaml
+++ b/MensMorris/View/MatchView.xaml
@@ -6,58 +6,84 @@
     <DataTemplate DataType="{x:Type vm:MatchVM}">
         <!-- Define required resources-->
         <DataTemplate.Resources>
-            <helpers:BooleanToVisibilityConverter x:Key="boolToVisibility" />
-            <helpers:CenterToBorderLocationConverter x:Key="centerToBorder" />
-            <helpers:SlotToColorConverter x:Key="slotToColor" />
-            <DataTemplate x:Key="ConnectionTemplate">
-                <Line X1="{Binding FirstPosition.Location.X}"
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="SlotView.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+                <helpers:BooleanToVisibilityConverter x:Key="boolToVisibility" />
+                <helpers:CenterToBorderLocationConverter x:Key="centerToBorder" />
+                <helpers:SlotToColorConverter x:Key="slotToColor" />
+                <DataTemplate x:Key="ConnectionTemplate">
+                    <Line X1="{Binding FirstPosition.Location.X}"
                       Y1="{Binding FirstPosition.Location.Y}"
                       X2="{Binding SecondPosition.Location.X}"
                       Y2="{Binding SecondPosition.Location.Y}"
                       Stroke="Black" StrokeThickness="3" StrokeStartLineCap="Round" StrokeEndLineCap="Round" />
-            </DataTemplate>
-            <DataTemplate x:Key="PositionTemplate">
-                <Ellipse Width="5" Height="5"
+                </DataTemplate>
+                <DataTemplate x:Key="PositionTemplate">
+                    <Ellipse Width="5" Height="5"
                          Margin="{Binding Location, Converter={StaticResource centerToBorder}, ConverterParameter='5'}"
                          Fill="Black">
-                </Ellipse>
-            </DataTemplate>
-            <DataTemplate x:Key="TileTemplate">
-                <Ellipse Width="10" Height="10"
-                         Visibility="{Binding IsOnBoard, Converter={StaticResource boolToVisibility}, ConverterParameter='collapse'}"
-                         Margin="{Binding Location, Converter={StaticResource centerToBorder}, ConverterParameter='10'}"
-                         Fill="{Binding Slot, Converter={StaticResource slotToColor}}">
-                </Ellipse>
-            </DataTemplate>
-            <helpers:BoardElementTemplateSelector x:Key="BoardElementSelector"
+                    </Ellipse>
+                </DataTemplate>
+                <DataTemplate x:Key="TileTemplate">
+                    <Button Width="10" Height="10"
+                        Visibility="{Binding IsOnBoard, Converter={StaticResource boolToVisibility}, ConverterParameter='collapse'}"
+                        Margin="{Binding Location, Converter={StaticResource centerToBorder}, ConverterParameter='10'}"
+                        Command="{Binding Select}">
+                        <Button.Template>
+                            <ControlTemplate>
+                                <Ellipse 
+                                    Fill="{Binding Slot, Converter={StaticResource slotToColor}}">
+                                </Ellipse>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </DataTemplate>
+                <helpers:BoardElementTemplateSelector x:Key="BoardElementSelector"
                     PositionTemplate="{StaticResource PositionTemplate}"
                     ConnectionTemplate="{StaticResource ConnectionTemplate}"
                     TileTemplate="{StaticResource TileTemplate}" />
+            </ResourceDictionary>
         </DataTemplate.Resources>
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Border Grid.Row="0" Margin="10" BorderBrush="AliceBlue" BorderThickness="3">
-                
-            </Border>
-            <Border Grid.Row="1" Margin="10" BorderBrush="Purple" BorderThickness="3">
-                
-            </Border>
-            <Viewbox DataContext="{Binding Board}" Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Center" Stretch="Uniform" >
-                <ItemsControl DataContext="" ItemsSource="{Binding BoardElements}" ItemTemplateSelector="{StaticResource BoardElementSelector}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <Canvas Height="100" Width="100" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </Viewbox>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.Style>
+                    <Style TargetType="Grid">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding ScreenMessage.IsActive}" Value="True">
+                                <Setter Property="Effect">
+                                    <Setter.Value>
+                                        <BlurEffect Radius="20" />
+                                    </Setter.Value>
+                                </Setter>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
+                <ContentPresenter Content="{Binding FirstSlot}" Grid.Row="0" Margin="20" VerticalAlignment="Center" />
+                <ContentPresenter Content="{Binding SecondSlot}" Grid.Row="1" Margin="20" VerticalAlignment="Center"  />
+                <Viewbox DataContext="{Binding Board}" Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Center" Stretch="Uniform" >
+                    <ItemsControl ItemsSource="{Binding BoardElements}" ItemTemplateSelector="{StaticResource BoardElementSelector}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <Canvas Height="100" Width="100" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </Viewbox>
+            </Grid>
+            <Label DataContext="{Binding ScreenMessage}" Visibility="{Binding IsActive, Converter={StaticResource boolToVisibility}}" 
+                   HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Message}" FontSize="50" Background="White">
+            </Label>
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
