--- a/MensMorris/View/StartView.xaml
+++ b/MensMorris/View/StartView.xaml
@@ -3,20 +3,18 @@
                     xmlns:local="clr-namespace:MensMorris.Game.View"
                     xmlns:vm="clr-namespace:MensMorris.Game.ViewModel">
     <DataTemplate DataType="{x:Type vm:StartVM}">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="500" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="400" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Border Grid.Row="1" Grid.Column="1" BorderBrush="Black" BorderThickness="5" Background="White">
-                
-            </Border>
-        </Grid>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
+            <Label>Player selection</Label>
+            <StackPanel Orientation="Horizontal">
+                <ComboBox ItemsSource="{Binding PlayerOptions}" SelectedValue="{Binding FirstPlayer}" >
+
+                </ComboBox>
+                <ComboBox ItemsSource="{Binding PlayerOptions}" SelectedValue="{Binding SecondPlayer}" >
+
+                </ComboBox>
+            </StackPanel>
+            <Label>Rules</Label>
+            <Button Command="{Binding StartMatch}">Start Match</Button>
+        </StackPanel>
     </DataTemplate>
 </ResourceDictionary>
