Created start UI and implemented settings

--- a/MensMorris/View/Converter.xaml
+++ b/MensMorris/View/Converter.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MensMorris.Game.View"
                     xmlns:helpers="clr-namespace:MensMorris.Game.Helpers">
+    <helpers:BooleanNegateConverter x:Key="boolNegate" />
     <helpers:BooleanToVisibilityConverter x:Key="boolToVisibility" />
     <helpers:CenterToBorderLocationConverter x:Key="centerToBorder" />
     <helpers:SlotToColorConverter x:Key="slotToColor" />
