--- a/MensMorris/MainWindow.xaml
+++ b/MensMorris/MainWindow.xaml
@@ -1,12 +1,9 @@
 ﻿<Window x:Class="MensMorris.Game.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MensMorris.Game"
-        xmlns:helpers="clr-namespace:MensMorris.Game.Helpers"
-        mc:Ignorable="d"
-        Title="Mens Morris" MinHeight="500" MinWidth="700">
+        Title="Mens Morris"
+        MinHeight="500" MinWidth="700"
+        Height="600" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
