--- a/MensMorris/View/TargetView.xaml
+++ b/MensMorris/View/TargetView.xaml
@@ -11,7 +11,7 @@
                 Command="{Binding Choose}">
             <Button.Template>
                 <ControlTemplate>
-                    <Ellipse Fill="Orange" Opacity="0.5" />
+                    <Ellipse Opacity="0.5" Fill="{Binding SlotNumber, Converter={StaticResource slotToColor}}" />
                 </ControlTemplate>
             </Button.Template>
         </Button>
