--- a/MensMorris/MainWindow.xaml
+++ b/MensMorris/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Mens Morris"
+        Icon="icon.ico"
         MinHeight="500" MinWidth="700"
         Height="600" Width="800">
     <Window.Resources>
