--- a/MensMorris/View/Converter.xaml
+++ b/MensMorris/View/Converter.xaml
@@ -1,9 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:MensMorris.Game.View"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:helpers="clr-namespace:MensMorris.Game.Helpers">
     <helpers:BooleanNegateConverter x:Key="boolNegate" />
     <helpers:BooleanToVisibilityConverter x:Key="boolToVisibility" />
     <helpers:CenterToBorderLocationConverter x:Key="centerToBorder" />
     <helpers:SlotToColorConverter x:Key="slotToColor" />
+    <sys:Int32 x:Key="fullSpan">
+        <!-- Int32 MaxValue-->
+        2147483647
+    </sys:Int32>
 </ResourceDictionary>
