--- a/MensMorris/View/MatchView.xaml
+++ b/MensMorris/View/MatchView.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:MensMorris.Game.View"
                     xmlns:vm="clr-namespace:MensMorris.Game.ViewModel">
     <!-- Link required resources-->
     <ResourceDictionary.MergedDictionaries>
@@ -14,13 +13,17 @@
     </ResourceDictionary.MergedDictionaries>
     <DataTemplate DataType="{x:Type vm:MatchVM}">
         <Grid>
-            <Grid>
+            <!-- Match -->
+            <Grid IsEnabled="{Binding ScreenMessage.IsActive, Converter={StaticResource boolNegate}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="250" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.Style>
@@ -29,16 +32,39 @@
                             <DataTrigger Binding="{Binding ScreenMessage.IsActive}" Value="True">
                                 <Setter Property="Effect">
                                     <Setter.Value>
-                                        <BlurEffect Radius="20" />
+                                        <BlurEffect Radius="40" />
                                     </Setter.Value>
                                 </Setter>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Grid.Style>
-                <ContentPresenter Content="{Binding FirstSlot}" Grid.Row="0" Margin="20" VerticalAlignment="Center" />
-                <ContentPresenter Content="{Binding SecondSlot}" Grid.Row="1" Margin="20" VerticalAlignment="Center"  />
-                <Viewbox Margin="20" DataContext="{Binding Board}" Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Center" Stretch="Uniform" >
+                <!-- Back to menu button -->
+                <Button Grid.Row="0" FontSize="14" Margin="10 20" HorizontalAlignment="Center" HorizontalContentAlignment="Center" 
+                        Command="{Binding BackToMenu}">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border BorderBrush="Black" BorderThickness="2" CornerRadius="20" Padding="10 2">
+                                <TextBlock Text="Back to menu" FontSize="30" FontWeight="Bold" Foreground="Black" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Effect">
+                                        <Setter.Value>
+                                            <DropShadowEffect BlurRadius="2" ShadowDepth="0" />
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <!-- First Slot-->
+                <ContentPresenter Content="{Binding FirstSlot}" Grid.Row="2" Margin="10 20" VerticalAlignment="Center" />
+                <!-- Second Slot-->
+                <ContentPresenter Content="{Binding SecondSlot}" Grid.Row="3" Margin="10 20" VerticalAlignment="Center" />
+                <!-- Board -->
+                <Viewbox Margin="5" DataContext="{Binding Board}" Grid.Column="1" Grid.RowSpan="{StaticResource fullSpan}" HorizontalAlignment="Center" Stretch="Uniform" >
                     <ItemsControl ItemsSource="{Binding BoardElements}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
@@ -48,9 +74,42 @@
                     </ItemsControl>
                 </Viewbox>
             </Grid>
-            <Label DataContext="{Binding ScreenMessage}" Visibility="{Binding IsActive, Converter={StaticResource boolToVisibility}}" 
-                   HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Message}" FontSize="50" Background="White">
-            </Label>
+            <!-- Screen message (overlays the match view if active) -->
+            <Border DataContext="{Binding ScreenMessage}" Visibility="{Binding IsActive, Converter={StaticResource boolToVisibility}}" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" CornerRadius="20" BorderBrush="Black" BorderThickness="2" Background="White">
+                <StackPanel  Orientation="Vertical">
+                    <!-- Message -->
+                    <TextBlock Margin="20" HorizontalAlignment="Center" Text="{Binding Message}" FontSize="60" FontWeight="Bold" Foreground="{Binding MessageColor}" />
+                    <!-- Options -->
+                    <ItemsControl Grid.Row="1" HorizontalAlignment="Center" Margin="10" ItemsSource="{Binding Options}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Button Command="{Binding Command}" Margin="20">
+                                    <Button.Template>
+                                        <ControlTemplate TargetType="Button">
+                                            <TextBlock Text="{Binding Description}" FontSize="30" FontWeight="Bold" Foreground="Black" />
+                                            <ControlTemplate.Triggers>
+                                                <Trigger Property="IsMouseOver" Value="True">
+                                                    <Setter Property="Effect">
+                                                        <Setter.Value>
+                                                            <DropShadowEffect BlurRadius="2" ShadowDepth="0" />
+                                                        </Setter.Value>
+                                                    </Setter>
+                                                </Trigger>
+                                            </ControlTemplate.Triggers>
+                                        </ControlTemplate>
+                                    </Button.Template>
+                                </Button>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </StackPanel>
+            </Border>
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
