--- a/MensMorris/View/Converter.xaml
+++ b/MensMorris/View/Converter.xaml
@@ -2,10 +2,12 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:helpers="clr-namespace:MensMorris.Game.Helpers">
+    <!-- Define converters for usage in views -->
     <helpers:BooleanNegateConverter x:Key="boolNegate" />
     <helpers:BooleanToVisibilityConverter x:Key="boolToVisibility" />
     <helpers:CenterToBorderLocationConverter x:Key="centerToBorder" />
     <helpers:SlotToColorConverter x:Key="slotToColor" />
+    <!-- Define int resource to show an element in full span (RowSpan / ColumnSpan) -->
     <sys:Int32 x:Key="fullSpan">
         <!-- Int32 MaxValue-->
         2147483647
