--- a/MensMorris/View/PositionView.xaml
+++ b/MensMorris/View/PositionView.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:MensMorris.Game.View"
                     xmlns:vm="clr-namespace:MensMorris.Game.ViewModel">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Converter.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <DataTemplate DataType="{x:Type vm:PositionVM}">
+        <!-- Draw a point for positions -->
         <Ellipse Width="5" Height="5"
                  Margin="{Binding Location, Converter={StaticResource centerToBorder}, ConverterParameter='5'}"
                  Fill="Black" />
